--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
    <h1>Jogo Pedra Papel Tesoura</h1>
+   <div id="jogada">Jogada Selecionada</div>
    <div>
       <button class="botoes" id="btnPedra">Pedra</button>
       <button class="botoes" id="btnPapel">Papel</button>
