--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
    <h1>Jogo Pedra Papel Tesoura</h1>
-   <div id="jogada">Jogada Selecionada</div>
+   <div id="jogada">Clique em uma Jogada !</div>
    <div>
-      <button class="botoes" id="btnPedra">Pedra</button>
-      <button class="botoes" id="btnPapel">Papel</button>
-      <button class="botoes" id="btnTesoura">Tesoura</button>
+      <button class="botoes" id="pedra">Pedra</button>
+      <button class="botoes" id="papel">Papel</button>
+      <button class="botoes" id="tesoura">Tesoura</button>
    </div>
 </body>
 </html>
