botoes e logica funcionando

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 </head>
 <body>
    <h1>Jogo Pedra Papel Tesoura</h1>
+   
    <div id="jogada">Clique em uma Jogada !</div>
+
    <div>
       <button class="botoes" id="pedra">Pedra</button>
       <button class="botoes" id="papel">Papel</button>
       <button class="botoes" id="tesoura">Tesoura</button>
    </div>
+
+   <div id="rodada"></div>
 </body>
 </html>
