--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -8,11 +9,14 @@
 
    <link rel="stylesheet" href="style.css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
    <title>Pedra - Papel - Tesoura</title>
+
 </head>
 <body>
    <h1>Jogo Pedra Papel Tesoura</h1>
    
+   <div id="jogadas"></div>
    <div id="jogada">Clique em uma Jogada !</div>
 
    <div>
@@ -22,5 +26,6 @@
    </div>
 
    <div id="rodada"></div>
+   <div id="placar"></div>
 </body>
 </html>
