funcionando preparado pro grafico

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <div id="jogadas"></div>
    <div id="jogada">Clique em uma Jogada !</div>
 
-   <div>
+   <div id="botoesJogo">
       <button class="botoes" id="pedra">Pedra</button>
       <button class="botoes" id="papel">Papel</button>
       <button class="botoes" id="tesoura">Tesoura</button>
