iniciando testes de CSS

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
 </head>
 <body>
-   <h1>Jogo Pedra Papel Tesoura</h1>
+   <div id="header">
+      <h1>Jogo Pedra Papel Tesoura</h1>
+   </div>
    
-   <div id="jogadas"></div>
+   <div id="jogadas">...</div>
    <div id="jogada">Clique em uma Jogada !</div>
 
    <div id="botoesJogo">
