tentando configurar reiniciar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
    <div id="header">
       <h1>Jogo Pedra Papel Tesoura</h1>
    </div>
-   
+   <div id="gameArea">
+      <div id="refreshArea">
    <div id="jogadas">...</div>
    <div id="jogada">Clique em uma Jogada !</div>
 
@@ -26,9 +27,10 @@
       <button class="botoes" id="papel">Papel</button>
       <button class="botoes" id="tesoura">Tesoura</button>
    </div>
-
+</div>
    <div id="rodada"></div>
    <div id="placar"></div>
    <div id="reiniciar"></div>
+</div>
 </body>
 </html>
