--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    <div id="gameArea">
       <div id="refreshArea">
    <div id="jogadas">...</div>
+   <div id="video"></div>
    <div id="jogada">Clique em uma Jogada !</div>
 
    <div id="botoesJogo">
