--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 </head>
 <body>
    <div id="header">
-      <h1>Jogo Pedra Papel Tesoura</h1>
+      <h1>Desafie a Maria !</h1>
+      <h2>Pedra, Papel, Tesouuuurá</h2>
    </div>
-   <div id="gameArea">
-      <div id="refreshArea">
+
    <div id="jogadas">...</div>
    <div id="video"></div>
    <div id="jogada">Clique em uma Jogada !</div>
 
    <div id="botoesJogo">
-      <button class="botoes" id="pedra">Pedra</button>
+      <button class="botoes" id="pedra"><img src="./midia/" alt=""></button>
       <button class="botoes" id="papel">Papel</button>
       <button class="botoes" id="tesoura">Tesoura</button>
    </div>
@@ -32,6 +32,6 @@
    <div id="rodada"></div>
    <div id="placar"></div>
    <div id="reiniciar"></div>
-</div>
+
 </body>
 </html>
