bug area click botoes

--- a/index.html
+++ b/index.html
@@ -15,18 +15,27 @@
 </head>
 <body>
    <div id="header">
-      <h1>Desafie a Maria !</h1>
-      <h2>Pedra, Papel, Tesouuuurá</h2>
+      <h2 id="desafie">Desafie a Maria !</h2>
+      <h1>Pedra, Papel, Tesoura</h1>
    </div>
-
-   <div id="jogadas">...</div>
+   <div id="dinamica">
+   <div id="jogadas"></div>
    <div id="video"></div>
    <div id="jogada">Clique em uma Jogada !</div>
-
+   </div>
    <div id="botoesJogo">
-      <button class="botoes" id="pedra"><img src="./midia/" alt=""></button>
-      <button class="botoes" id="papel">Papel</button>
-      <button class="botoes" id="tesoura">Tesoura</button>
+      <button class="botoes">
+         <img class="btnImage" id="pedra" src="./midia/botao-pedra.png" alt="">
+         <figcaption>Pedra</figcaption>
+      </button>
+      <button class="botoes">
+         <img class="btnImage"  id="papel" src="./midia/botao-papel.png" alt="">
+         <figcaption>Papel</figcaption>
+      </button>
+      <button class="botoes">
+         <img class="btnImage"  id="tesoura" src="./midia/botao-tesoura.png" alt="">
+         <figcaption>Tesoura</figcaption>
+      </button>
    </div>
 </div>
    <div id="rodada"></div>
