--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <div id="video"></div>
    <div id="jogada">Clique em uma Jogada !</div>
    </div>
-   <div id="botoesJogo">
+   <!-- <div id="botoesJogo">
       <button class="botoes">
          <img class="btnImage" id="pedra" src="./midia/botao-pedra.png" alt="">
          <figcaption>Pedra</figcaption>
@@ -36,6 +36,17 @@
          <img class="btnImage"  id="tesoura" src="./midia/botao-tesoura.png" alt="">
          <figcaption>Tesoura</figcaption>
       </button>
+   </div> -->
+   <div id="botoesJogo">
+      <div id="botoes">
+         <img class="btnImage" id="pedra" src="./midia/botao-pedra.png" alt=""><figcaption>Pedra</figcaption>
+      </div>
+      <div id="botoes">
+         <img class="btnImage"  id="papel" src="./midia/botao-papel.png" alt=""><figcaption>Papel</figcaption>
+      </div>
+      <div id="botoes">
+         <img class="btnImage"  id="tesoura" src="./midia/botao-tesoura.png" alt=""><figcaption>Tesoura</figcaption>
+      </div>
    </div>
 </div>
    <div id="rodada"></div>
