iniciando branch pro css

--- a/index.html
+++ b/index.html
@@ -15,28 +15,14 @@
 </head>
 <body>
    <div id="header">
-      <h3 id="desafie">Desafie a Maria !</h3>
+      <h3 id="desafie">Desafie a Duda !</h3>
       <h1>Pedra, Papel, Tesoura</h1>
    </div>
    <div id="dinamica">
    <div id="jogadas"></div>
    <div id="video"></div>
-   <div id="jogada">Clique em uma Jogada !</div>
+   <div id="jogada">Quem fizer 5 ganha! Clique em uma Jogada !</div>
    </div>
-   <!-- <div id="botoesJogo">
-      <button class="botoes">
-         <img class="btnImage" id="pedra" src="./midia/botao-pedra.png" alt="">
-         <figcaption>Pedra</figcaption>
-      </button>
-      <button class="botoes">
-         <img class="btnImage"  id="papel" src="./midia/botao-papel.png" alt="">
-         <figcaption>Papel</figcaption>
-      </button>
-      <button class="botoes">
-         <img class="btnImage"  id="tesoura" src="./midia/botao-tesoura.png" alt="">
-         <figcaption>Tesoura</figcaption>
-      </button>
-   </div> -->
    <div id="botoesJogo">
       <div id="botoes">
          <img class="btnImage" id="pedra" src="./midia/botao-pedra.png" alt=""><figcaption>Pedra</figcaption>
