implementando pop modal

--- a/index.html
+++ b/index.html
@@ -53,5 +53,23 @@
    <div id="placar"></div>
    <div id="reiniciar"></div>
 
+   <!-- modal pop up fim de jogo -->
+   <button id="testaPop">teste modal</button>
+   <div id="popFim" class="pop">
+      <!-- Modal content -->
+      <div class="pop-content">
+        <div class="pop-header">
+          <h2>Modal Header</h2>
+        </div>
+        <div class="pop-text">
+          <p>Some text in the Modal Body</p>
+          <p>Some other text...</p>
+        </div>
+        <div class="pop-botao">
+         <button id="restart">De Novo !</button>
+        </div>
+      </div>
+    
+    </div>
 </body>
 </html>
