sons e pop funcionando

--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
       <!-- Modal content -->
       <div class="pop-content">
         <div class="pop-header">
-          <h2>Modal Header</h2>
+          <h2>pop header</h2>
         </div>
         <div class="pop-text">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
+          <p>pop text</p>
         </div>
         <div class="pop-botao">
-         <button id="restart">De Novo !</button>
+         <button id="btn-restart">De Novo !</button>
         </div>
       </div>
     
