--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
    <div id="reiniciar"></div>
 
    <!-- modal pop up fim de jogo -->
-   <button id="testaPop">teste modal</button>
    <div id="popFim" class="pop">
       <!-- Modal content -->
       <div class="pop-content">
         <div class="pop-header">
-          <h2>pop header</h2>
+          <h2>pop result</h2>
         </div>
         <div class="pop-text">
           <p>pop text</p>
